tests/compile-fail/serde_deserialize_owned_check.rs
use secure_gate::serializable_dynamic_alias;

serializable_dynamic_alias!(pub TestSecret, &str);

fn main() {}
